k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
    service: keycloak
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: keycloak
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: keycloak-v1
#   labels:
#      app: keycloak
#      version: v1
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: keycloak
#       version: v1
#   template:
#     metadata:
#       annotations:
#         sidecar.istio.io/inject: 'true'
#       labels:
#         app: keycloak
#         version: v1
#     spec:
#       serviceAccountName: keycloak
#       containers:
#         - name: keycloak
#           image: image-registry.openshift-image-registry.svc:5000/keycloak-dev/keycloak:0.0.1
#           imagePullPolicy: IfNotPresent
#           ports:
#             - containerPort: 8080
#           readinessProbe:
#             httpGet:
#               path: /
#               port: 8080
#               scheme: HTTP
#             initialDelaySeconds: 30
#             timeoutSeconds: 1
#             periodSeconds: 5
#             successThreshold: 1
#             failureThreshold: 3
